--- a/type.html
+++ b/type.html
@@ -46,7 +46,7 @@
             <div id="wordsCompleted"><p>hello</p></div>
             <div id="timer">10</div>
         </div>
-        <div id="worddiv" tabindex="0">
+        <div id="worddiv">
             <div id="word"></div>
         </div>
         <div id="restartTest">
@@ -84,7 +84,6 @@
             </div>
         </div>
     </div>
-    <script src="./type.js" type="module"></script>
-    <script src="./words.js" type="module"></script>
+    <script src="./type.js"></script>
 </body>
 </html>
